--- a/index.html
+++ b/index.html
@@ -15,7 +15,28 @@
     <title>Drink Water</title>
   </head>
   <body>
-    <section class="project"></section>
+    <div class="project">
+      <h1>Drink Water</h1>
+      <h3>Goal: 2 Liters</h3>
+      <div class="cup">
+        <div class="remained" id="remained">
+          <span id="liters"></span>
+          <small>Remained</small>
+        </div>
+        <div class="percentage" id="percentage"></div>
+      </div>
+      <p class="text">Select how many glasses of water that you have drank</p>
+      <div class="cups">
+        <div class="cup cup-small">250 ml</div>
+        <div class="cup cup-small">250 ml</div>
+        <div class="cup cup-small">250 ml</div>
+        <div class="cup cup-small">250 ml</div>
+        <div class="cup cup-small">250 ml</div>
+        <div class="cup cup-small">250 ml</div>
+        <div class="cup cup-small">250 ml</div>
+        <div class="cup cup-small">250 ml</div>
+      </div>
+    </div>
     <div class="container">
       <div class="title">
         <h1>Simon S. Prophet</h1>
